# iobox

./: .coverage  .coveragerc  .env.example  .fan-out-scratchpad  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  404.html  ACCOUNTS.md  AUTH.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  auth.docx  cspell.json  idea.md  index.html  mkdocs.yml  objects.inv  plan.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  sitemap.xml
.chat-logs/: chat-log-01.xml  detailed-plan-01.md
.claude/: roadmap-hook-state.json  settings.json
.claude/hooks/: README.md  roadmap-checker.py
.dev/: autopilot.md  code-review.md  mkdocs-shadcn-setup.md  pitch.md  project-summary.md  roadmap.md  task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md  task-007.md  task-008.md  task-010.md  task-011.md  task-012.md  task-013.md  task-014.md  task-015.md  task-016.md  task-017.md  task-018.md  task-019.md  task-020.md  vision.md
.dev/research/: embedding-stack.md  testing-o365.md
.dev/research/iobox-o365-outlook-support/: enquiry-1.md  enquiry-2.md  enquiry-3.md  enquiry-4.md  enquiry-5.md  enquiry-6.md  plan.md  report.md  sources.md
.dev/specs/: 01-critical-fixes.md  04-send-and-drafts.md  06-packaging.md  08-cicd.md  10-outlook-o365-support.md
.github/workflows/: ci.yml  docs.yml  release.yml
api/auth/: index.html
api/email_retrieval/: index.html
api/email_search/: index.html
api/email_sender/: index.html
api/file_manager/: index.html
api/markdown_converter/: index.html
api/utils/: index.html
cli/auth-status/: index.html
cli/drafts/: index.html
cli/forward/: index.html
cli/label/: index.html
cli/save/: index.html
cli/search/: index.html
cli/send/: index.html
cli/trash/: index.html
docs/: authentication.md  changelog.md  index.md  mcp.md  mkdocs.yml  roadmap.md  workspace-guide.md
docs/api/: auth.md  email_retrieval.md  email_search.md  email_sender.md  file_manager.md  markdown_converter.md  utils.md
docs/cli/: forward.md  save.md  search.md
docs/content/: index.md  integrations.md  mcp.md
docs/content/cli/: auth-status.md  drafts.md  events.md  files.md  label.md  send.md  space.md  trash.md
docs/content/css/: custom.css
docs/content/getting-started/: authentication.md  quickstart.md
docs/content/providers/: google-calendar.md
docs/getting-started/: installation.md
docs/overrides/: main.html
docs/providers/: gmail.md  google-drive.md  outlook.md
docs/specs/: 02-read-enhancements.md  03-write-operations.md  05-performance.md  07-mcp-server.md  09-docs-site.md
getting-started/authentication/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
integrations/: index.html
mcp/: index.html
memory-bank/: .cursorrules  .env.example  README.md  detailed-plan.md  high-level-plan.md  meta.md  project-background.md  retrospectives.md  scratchpad.md  todo.md
memory-bank/prompts/: README.md  integration_proposal.md  updated_windsurfrules.md
memory-bank/prompts/code/: function_implementation_guide.md
memory-bank/prompts/feature/: step1_guide.md  step2_guide.md  step3_guide.md  step4_guide.md
memory-bank/prompts/process/: development_cycle_guide.md  rule_consolidation_guide.md  rules_update_guide.md
memory-bank/prompts/setup/: configuration_templates.md  initial_commit.md  project_setup_guide.md  python_environment_setup.md  remote_repository_setup.md
memory-bank/prompts/testing/: comprehensive_test_analysis.md
memory-bank/templates/: .gitignore.template  .windsurfrules
search/: search_index.json
src/: main.py  test_auth.py
src/iobox/: __init__.py  __main__.py  accounts.py  auth.py  cli.py  email_retrieval.py  email_search.py  email_sender.py  file_manager.py  markdown.py  markdown_converter.py  mcp_server.py  modes.py  space_config.py  utils.py  workspace.py
src/iobox/processing/: __init__.py  embed.py  file_manager.py  markdown.py  markdown_converter.py  summarize.py
src/iobox/providers/: __init__.py  base.py  gmail.py  google_auth.py  google_calendar.py  google_drive.py  microsoft_auth.py  onedrive.py  outlook.py  outlook_auth.py  outlook_calendar.py  token_store.py
src/iobox/providers/google/: __init__.py  _retrieval.py  _search.py  _sender.py  auth.py  calendar.py  email.py  files.py
src/iobox/providers/o365/: __init__.py  auth.py  calendar.py  email.py  files.py
test_output/: 2025-03-23-task-update-deepseek-ban-and-amd-gaia-lead.md
tests/: .gitignore  conftest.py
tests/fixtures/: mock_calendar_responses.py  mock_drive_responses.py  mock_outlook_responses.py  mock_responses.py
tests/integration/: test_email_to_markdown_workflow.py  test_provider_parity.py
tests/live/: README.md  cleanup.py  run_tests.py
tests/unit/: test_auth.py  test_calendar_write_ops.py  test_cli.py  test_cli_space.py  test_cli_workspace_commands.py  test_email_retrieval.py  test_email_search.py  test_email_sender.py  test_file_manager.py  test_file_write_ops.py  test_gmail_provider.py  test_google_auth.py  test_google_calendar_provider.py  test_google_drive_provider.py  test_markdown.py  test_mcp_server.py  test_microsoft_auth.py  test_modes.py  test_o365_token_store_backend.py  test_onedrive_provider.py  test_outlook_auth.py  test_outlook_calendar_provider.py  test_outlook_provider.py  test_outlook_sync.py  test_processing_embed.py  test_processing_markdown.py  test_processing_summarize.py  test_provider_base_types.py  test_provider_contract.py  test_query_translation.py  test_space_config.py  test_token_store.py  test_utils.py  test_workspace.py  test_workspace_writes.py
