[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iobox"
version = "0.2.0"
description = "Gmail to Markdown converter — extract, search and save emails as Markdown files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Tim", email = "tim@goodcollective.com.au"},
]
keywords = ["gmail", "email", "markdown", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = [
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.0",
    "html2text>=2024.0",
    "typer>=0.9",
    "python-dotenv>=1.0",
    "python-dateutil>=2.8",
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
outlook = ["O365>=2.1.8"]
mcp = ["mcp>=1.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.0",
    "ruff>=0.5",
    "mypy>=1.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/timainge/iobox"
Repository = "https://github.com/timainge/iobox"
Issues = "https://github.com/timainge/iobox/issues"

[project.scripts]
iobox = "iobox.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/iobox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term --cov-report=html"
norecursedirs = [".* venv build dist"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "ruff",
    "types-PyYAML",
]
